--- a/.github/workflows/AutoDeploy.yml
+++ b/.github/workflows/AutoDeploy.yml
@@ -26,5 +26,5 @@ jobs:
           echo "Deploying main to Live..."
           npm i
           npm run build
-          firebase deploy --only hosting
+          firebase deploy
           echo "Deploy Complete!"
