--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "firebase": "^10.1.0",
+    "firebase-tools": "^12.4.6",
     "jest": "^29.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
